// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NestedList.svelte > should render empty nested list 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
/>
`;

exports[`NestedList.svelte > should render nested items 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </node>
   
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </node>
   
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="2"
    id="id-2"
    role="treeitem"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        c
      </p>
      
    </item>
  </node>
   
  
</nested-list>
`;

exports[`NestedList.svelte > should render open items 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="true"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <icon
      aria-label="collapse"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-opened"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </node>
   
  <div
    aria-selected="false"
    role="treeitem"
  >
    <nested-list
      class="nested-list flex flex-col w-full list"
      role="tree"
    >
      <node
        aria-expanded="false"
        aria-selected="false"
        class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
        data-path="0,0"
        id="id-0-0"
        role="treeitem"
      >
        <span
          class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
        >
          <i
            class="border-r"
          />
           
          <i
            class="border-b"
          />
          
        </span>
        
        <span
          class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
        />
        
         
        <item>
          
           
          <p>
            aa
          </p>
          
        </item>
      </node>
       
      
    </nested-list>
     
  </div>
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </node>
   
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="2"
    id="id-2"
    role="treeitem"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        c
      </p>
      
    </item>
  </node>
   
  
</nested-list>
`;

exports[`NestedList.svelte > should render using default field mapping 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </node>
   
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </node>
   
  
</nested-list>
`;

exports[`NestedList.svelte > should render using field mappings 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </node>
   
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </node>
   
  
</nested-list>
`;

exports[`NestedList.svelte > should render with hierarchy 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="true"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0,0"
    id="id-0-0"
    role="treeitem"
  >
    <icon
      aria-label="collapse"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-opened"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </node>
   
  <div
    aria-selected="false"
    role="treeitem"
  >
    <nested-list
      class="nested-list flex flex-col w-full list"
      role="tree"
    >
      <node
        aria-expanded="false"
        aria-selected="false"
        class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
        data-path="0,0,0"
        id="id-0-0-0"
        role="treeitem"
      >
        <span
          class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
        >
          <i
            class="border-r"
          />
           
          <i
            class="border-b"
          />
          
        </span>
        
        <span
          class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
        />
        
         
        <item>
          
           
          <p>
            aa
          </p>
          
        </item>
      </node>
       
      
    </nested-list>
     
  </div>
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0,1"
    id="id-0-1"
    role="treeitem"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </node>
   
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0,2"
    id="id-0-2"
    role="treeitem"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        c
      </p>
      
    </item>
  </node>
   
  
</nested-list>
`;

exports[`NestedList.svelte > should render with hierarchy 2`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="true"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0,0,0"
    id="id-0-0-0"
    role="treeitem"
  >
    <icon
      aria-label="collapse"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-opened"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </node>
   
  <div
    aria-selected="false"
    role="treeitem"
  >
    <nested-list
      class="nested-list flex flex-col w-full list"
      role="tree"
    >
      <node
        aria-expanded="false"
        aria-selected="false"
        class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
        data-path="0,0,0,0"
        id="id-0-0-0-0"
        role="treeitem"
      >
        <span
          class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
        >
          <i
            class="border-r"
          />
           
          <i
            class="border-b"
          />
          
        </span>
        
        <span
          class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
        />
        
         
        <item>
          
           
          <p>
            aa
          </p>
          
        </item>
      </node>
       
      
    </nested-list>
     
  </div>
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0,0,1"
    id="id-0-0-1"
    role="treeitem"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </node>
   
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0,0,2"
    id="id-0-0-2"
    role="treeitem"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        c
      </p>
      
    </item>
  </node>
   
  
</nested-list>
`;

exports[`NestedList.svelte > should support custom icons 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </node>
   
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </node>
   
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="2"
    id="id-2"
    role="treeitem"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        c
      </p>
      
    </item>
  </node>
   
  
</nested-list>
`;

exports[`NestedList.svelte > should support custom icons 2`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </node>
   
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </node>
   
  
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="2"
    id="id-2"
    role="treeitem"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        c
      </p>
      
    </item>
  </node>
   
  
</nested-list>
`;
